# Gatito-Dash

./: CMakeLists.txt  README.md
src/: Game.cpp  Game.h  main.cpp
src/GameObjects/: Enemy.cpp  Enemy.h  GameObject.cpp  GameObject.h  Gem.cpp  Gem.h  Platforms.cpp  Platforms.h  Player.cpp  Player.h  Spike.cpp  Spike.h
src/Media/: Audio.cpp  Audio.h  Text.cpp  Text.h
src/Other Logic/: TileMap.cpp  TileMap.h  Vector.cpp  Vector.h
